# path_tracking_pid

./: .clang-tidy  CMakeLists.txt  LICENSE  Old package xml file   README.md  package.xml  path_tracking_pid.xml  path_tracking_pid_plugin.xml
.github/workflows/: industrial_ci_action.yml
cfg/: Pid.cfg
doc/: integral_tustin.ipynb  second_order_lowpass_tustin.ipynb
doc/figures/: controller.ipe  flowchart.ipe  mpc.ipe  tracking.ipe  tracking_base_link.ipe  tricycle_model.ipe
include/path_tracking_pid/: controller.hpp  controller_OLD.hpp  path_tracking_pid_local_planner.hpp  path_tracking_pid_nav2_controller.hpp  units.hpp  visualization.hpp
include/path_tracking_pid/details/: derivative.hpp  derivative_filtered_error_tracker.hpp  fifo_array.hpp  filtered_error_tracker.hpp  integral.hpp  no_copy_no_move.hpp  second_order_lowpass.hpp
launch/: path_tracking_pid_mbf.launch
msg/: PidDebug.msg  PidFeedback.msg
param/: controllers.yaml  path_tracking_pid.yaml
src/: calculations.cpp  calculations.hpp  common.hpp  controller.cpp  controller_OLD.cpp  path_tracking_pid_local_planner.cpp  path_tracking_pid_nav2_controller.cpp  visualization.cpp
src/details/: derivative.cpp  derivative_filtered_error_tracker.cpp  filtered_error_tracker.cpp  integral.cpp  second_order_lowpass.cpp
test/: local_costmap_params.yaml  paths.py  test.rviz  test_path_tracking_pid.py  test_path_tracking_pid.test  test_path_tracking_pid_accel.py  test_path_tracking_pid_bw_turn_cancel.py  test_path_tracking_pid_fw_bw.py  test_path_tracking_pid_preempt.py  test_path_tracking_pid_turn_skip.py
test/unittests/: test_calculations.cpp  test_derivative.cpp  test_fifo_array.cpp  test_integral.cpp  test_main.cpp  test_second_order_lowpass.cpp
trajectories/: back_and_forth.yaml  coverage.yaml  coverage_actiongoal.yaml  coverage_map.yaml  double_points.yaml  empty.yaml  empty_frame_ids.yaml  test_path.yaml  zigzag.yaml
