<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>path_tracking_pid</name>
  <version>1.0.0</version>
  <description>Follows a trajectory with open-loop speed and closed loop (pid) lateral control</description>
  <maintainer email="cesar.lopez@nobleo.nl">Cesar Lopez</maintainer>
  <license>TBD</license>

  <build_depend>rosidl_default_generators</build_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_common</depend>
  <depend>nav2_core</depend>
  <depend>nav2_util</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>pluginlib</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/path_tracking_pid.xml" />
  </export>

</package>
